--- a/app/views/rails_observatory/requests/index.html.erb
+++ b/app/views/rails_observatory/requests/index.html.erb
@@ -1,32 +1,7 @@
-<% content_for(:title, 'Controllers') %>
+<% content_for(:title, params[:controller_action].presence || 'Requests') %>
+<% content_for(:subtitle, 'Requests') if params[:controller_action] %>
 <style>
-  table {
-    width: 100%;
-    border-spacing: 0;
-    /*border: 1px solid var(--divider);*/
 
-    /*padding:0;*/
-
-    & th {
-      text-align: left;
-      font-weight: 400;
-      padding: 0.5rem 1rem;
-      border-bottom: 1px solid var(--divider);
-
-      &:first-child {
-        border-top-left-radius: .5rem;
-      }
-
-      &:last-child {
-        border-top-right-radius: .5rem;
-      }
-
-    }
-
-    & td {
-      padding: 0.75rem 1rem;
-    }
-  }
 
   .card {
     border-radius: 0.5rem;
@@ -56,6 +31,10 @@
     }
 
   }
+  .table-overflow {
+    overflow: auto;
+    max-height: 20rem;
+  }
 </style>
 <div class="library-grid">
   <%= render 'chart', name: 'Latency', series: @latency_series, type: 'line' %>
@@ -63,11 +42,9 @@
   <%= render 'chart', name: "Latency Breakdown", series: @latency_composition, type: 'area' %>
   <%= render 'chart', name: 'Errors', series: @errors, type: 'bar', palette: 'palette7' %>
 
-
-
-
-  <div class="card table">
-    <h2>Controllers</h2>
+  <% if params[:controller_action].blank? %>
+    <div class="card table">
+    <h2>By Controller Action</h2>
     <table>
       <thead>
       <tr>
@@ -92,7 +69,7 @@
             ms
           </td>
           <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-            <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', controller_metric_path(controller_metric.id) %></a>
+            <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', requests_path(controller_action:controller_metric.action.to_param) %></a>
           </td>
         </tr>
       <% end %>
@@ -101,24 +78,37 @@
       </tbody>
     </table>
   </div>
+  <% end %>
 
   <div class="card table">
-    <h2>Recent Events</h2>
+    <h2>Recent Requests</h2>
+    <div class="table-overflow">
     <table>
       <thead>
       <tr>
         <th>Happened At</th>
-        <th>Name</th>
+        <th>Request ID</th>
+        <% if params[:controller_action].blank? %><th>Controller Action</th><% end %>
         <th>Duration</th>
+        <th>Status</th>
+        <th>Method</th>
+        <th>View ms</th>
+        <th>DB ms</th>
       </tr>
       </thead>
       <% @events.each do |e| %>
         <tr>
           <td><%= e.timestamp.to_fs(:db) %></td>
-          <td><%= e.name %></td>
-          <td><%= e.duration %></td>
+          <td class="request-id"><%= link_to e.payload['request_id'], request_path(e.payload['request_id']) %></td>
+          <% if params[:controller_action].blank? %><td><%= "#{e.payload['controller']}##{e.payload['action']}" %></td><% end %>
+          <td><%= e.duration.to_f.round(2) %></td>
+          <td><%= e.payload['status'] %></td>
+          <td><%= e.payload['method'] %></td>
+          <td><%= e.payload['view_runtime'].to_f.round(2) %></td>
+          <td><%= e.payload['db_runtime'].to_f.round(2) %></td>
         </tr>
       <% end %>
     </table>
+    </div>
   </div>
 </div>
