--- a/app/views/rails_observatory/requests/show.html.erb
+++ b/app/views/rails_observatory/requests/show.html.erb
@@ -1,5 +1,5 @@
-<% content_for :subtitle, "Request" %>
-<% content_for :title, params[:id] %>
+<% content_for :title, "Request Details" %>
+<%# content_for :title, params[:id] %>
 <style>
   @scope {
     :scope {
@@ -9,12 +9,40 @@
 </style>
 <style>
 
-  h2 {
+  header {
     border-bottom: 1px solid var(--divider);
     padding: 1rem 2rem;
-    margin: 0;
-    font-family: var(--font-mono);
+    /*font-family: var(--font-mono);*/
     background-color: var(--surface-hover);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    & h2 {
+      margin: 0;
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+      font-size: 1.25rem;
+
+      ._format {
+        color: var(--black-secondary);
+      }
+
+      ._status-indicator {
+        display: inline-block;
+        width: .75rem;
+        height: .75rem;
+        border-radius: 50%;
+        background-color: color-mix(in oklab, #066839 80%, white);
+        border:4px solid color-mix(in oklab, #066839 30%, var(--surface-hover));
+        margin-right: .5rem;
+      }
+    }
+
+    ._controller {
+      color: var(--black-secondary);
+    }
   }
 
   .headers, .params {
@@ -65,6 +93,13 @@
     border-bottom: 1px solid var(--divider);
     margin: 0;
 
+    ._unit {
+      font-size: 1.3rem;
+      font-weight: 400;
+      margin-left:.25rem;
+      color: var(--black-secondary);
+    }
+
     & > * {
       padding: 2rem 2rem;
       flex-grow: 1;
@@ -74,7 +109,7 @@
       }
 
       & > dt {
-        font-weight: bold;
+        font-weight: 400;
         color: var(--black-secondary);
         margin-bottom: .75rem;
       }
@@ -83,6 +118,8 @@
         font-size: 2.5rem;
         font-weight: 400;
         margin: 0;
+        display: flex;
+        align-items: baseline;
       }
     }
   }
@@ -113,11 +150,17 @@
     }
   }
 </style>
-<h2>
-  <%= @req.payload['method'] %>
-  <%= @req.payload['path'] %>
-  <%= @req.payload['format'] %>
-</h2>
+<header>
+  <h2>
+    <div class="_status-indicator"></div>
+    <%= @req.payload['method'] %>
+    <%= @req.payload['path'] %>
+    <span class="_format"><%= @req.payload['format'] %></span>
+  </h2>
+  <span class="_controller">
+  <%= @req.payload['controller'] %>#<%= @req.payload['action'] %>
+  </span>
+</header>
 <dl class="request-stats">
   <div>
     <dt>Status</dt>
@@ -125,15 +168,15 @@
   </div>
   <div>
     <dt>Duration</dt>
-    <dd><%= @req.duration.to_f.round(2) %></dd>
+    <dd><%= @req.duration.to_f.round(2) %><span class="_unit">ms</span></dd>
   </div>
   <div>
     <dt>View Runtime</dt>
-    <dd><%= @req.payload['view_runtime'].to_f.round(2) %></dd>
+    <dd><%= @req.payload['view_runtime'].to_f.round(2) %><span class="_unit">ms</span></dd>
   </div>
   <div>
     <dt>DB Runtime</dt>
-    <dd><%= @req.payload['db_runtime'].to_f.round(2) %></dd>
+    <dd><%= @req.payload['db_runtime'].to_f.round(2) %><span class="_unit">ms</span></dd>
   </div>
 </dl>
 <details class="headers">
