--- a/app/views/rails_observatory/requests/index.html.erb
+++ b/app/views/rails_observatory/requests/index.html.erb
@@ -3,9 +3,6 @@
 <style>
 
 
-
-
-
   .library-grid {
     display: grid;
 
@@ -17,6 +14,7 @@
     }
 
   }
+
   .table-overflow {
     overflow: auto;
     max-height: 20rem;
@@ -30,71 +28,44 @@
 
   <% if params[:controller_action].blank? %>
     <div class="card table">
-    <h2>By Controller Action</h2>
-    <table>
-      <thead>
-      <tr>
-        <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Controller
-          Action
-        </th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Requests</th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Avg
-          Latency
-        </th>
-        <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
-          <span class="sr-only">View</span>
-        </th>
-      </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200 bg-white">
-      <% @controller_metrics.each do |controller_metric| %>
+      <h2>By Controller Action</h2>
+      <table>
+        <thead>
         <tr>
-          <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
-          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
-          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= controller_metric.avg_latency(@time_range).to_f.round(2) %>
-            ms
-          </td>
-          <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-            <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', requests_path(controller_action:controller_metric.action.to_param) %></a>
-          </td>
+          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Controller
+            Action
+          </th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Requests</th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Avg
+            Latency
+          </th>
+          <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
+            <span class="sr-only">View</span>
+          </th>
         </tr>
-      <% end %>
+        </thead>
+        <tbody class="divide-y divide-gray-200 bg-white">
+        <% @controller_metrics.each do |controller_metric| %>
+          <tr>
+            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
+            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
+            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= controller_metric.avg_latency(@time_range).to_f.round(2) %>
+              ms
+            </td>
+            <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
+              <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', requests_path(controller_action: controller_metric.action.to_param) %></a>
+            </td>
+          </tr>
+        <% end %>
 
-      <!-- More people... -->
-      </tbody>
-    </table>
-  </div>
+        <!-- More people... -->
+        </tbody>
+      </table>
+    </div>
   <% end %>
 
   <div class="card table">
     <h2>Recent Requests</h2>
-    <div class="table-overflow">
-    <table>
-      <thead>
-      <tr>
-        <th>Happened At</th>
-        <th>Request ID</th>
-        <% if params[:controller_action].blank? %><th>Controller Action</th><% end %>
-        <th>Duration</th>
-        <th>Status</th>
-        <th>Method</th>
-        <th>View ms</th>
-        <th>DB ms</th>
-      </tr>
-      </thead>
-      <% @events.each do |e| %>
-        <tr>
-          <td><%= e.timestamp.to_fs(:db) %></td>
-          <td class="request-id"><%= link_to e.payload[:request_id], request_path(e.payload[:request_id]) %></td>
-          <% if params[:controller_action].blank? %><td><%= "#{e.payload['controller']}##{e.payload['action']}" %></td><% end %>
-          <td><%= e.duration.to_f.round(2) %></td>
-          <td><%= e.payload[:status] %></td>
-          <td><%= e.payload[:method] %></td>
-          <td><%= e.payload[:view_runtime].to_f.round(2) %></td>
-          <td><%= e.payload[:db_runtime].to_f.round(2) %></td>
-        </tr>
-      <% end %>
-    </table>
-    </div>
+    <%= render 'events_table', events: @events, fields: [:timestamp, :request_id, :controller_action, :duration, :status, :request_method, :view_runtime, :db_runtime] %>
   </div>
 </div>
