a bit more refactoring

--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -218,6 +218,10 @@
       }
     }
 
+    .chart {
+      height: 265px;
+    }
+
     .side-nav {
       grid-area: side-nav;
       grid-row: 1 / -1;
