--- a/app/views/rails_observatory/requests/index.html.erb
+++ b/app/views/rails_observatory/requests/index.html.erb
@@ -22,9 +22,9 @@
 </style>
 <div class="library-grid">
   <%= render 'chart', name: 'Latency', series: @latency_series, type: 'line' %>
-  <%= render 'chart', name: 'Requests', series: @request_count_range, type: 'bar' %>
-  <%= render 'chart', name: "Latency Breakdown", series: @latency_composition, type: 'area' %>
-  <%= render 'chart', name: 'Errors', series: @errors, type: 'bar', palette: 'palette7' %>
+  <%= render 'chart', name: 'Requests', series: @count_series, type: 'bar' %>
+  <%#= render 'chart', name: "Latency Breakdown", series: @latency_composition, type: 'area' %>
+  <%#= render 'chart', name: 'Errors', series: @errors, type: 'bar', palette: 'palette7' %>
 
   <% if params[:controller_action].blank? %>
     <div class="card table">
@@ -45,15 +45,15 @@
         </tr>
         </thead>
         <tbody class="divide-y divide-gray-200 bg-white">
-        <% @controller_metrics.each do |controller_metric| %>
+        <% @count_by_controller.each do |series| %>
           <tr>
-            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
-            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
-            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= controller_metric.avg_latency(@time_range).to_f.round(2) %>
+            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= series.labels[:action] %></td>
+            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= series.data.dig(0,1) %></td>
+            <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= @latency_by_controller[series.labels[:action]].data.dig(0,1).to_f.round(2) %>
               ms
             </td>
             <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-              <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', requests_path(controller_action: controller_metric.action.to_param) %></a>
+              <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', requests_path(controller_action: series.labels[:action].to_param) %></a>
             </td>
           </tr>
         <% end %>
